# revolut-edavki

./: .gitignore  README.md  companies.xml  pyproject.toml  revolut_davki.py
tests/: test_synthetic_revolut_pipeline.py
